<resources>
    <string name="app_name">The A Team\'s Warehouse</string>
    <string name="title_home">Home</string>
    <string name="title_add">Add</string>
    <string name="title_request">Request</string>
    <string name="title_remove">Remove</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="welcome">Welcome</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="forgot_pass">Forgot your password?</string>
    <string name="forgot_pass_instructions">We will send you reset instructions by email.</string>
    <string name="reset_password">Reset Your Password</string>
    <string name="navigate_back">Back</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <!-- Home Page strings -->
    <string name="show_all">ALL PRODUCTS</string>
    <string name="show_sold">SOLD PRODUCTS</string>
    <string name="show_dash">DASHBOARD</string>
    <!--Strings displayed on pages-->
    <string name="add_product">Add a Product</string>
    <string name="remove_product">Remove a Product</string>
    <string name="request_product">Request a Product</string>
    <!--Strings for Add & Request com.example.glorious.warehousemanagement.Product-->
    <string name="prompt_name">Product Name</string>
    <string name="prompt_quantity">Quantity</string>
    <string name="prompt_desc">Description</string>
    <string name="prompt_manufacture">Manufacturer</string>
    <string name="prompt_price">Price</string>
    <string name="prompt_customer_name">Customer Name</string>
    <string name="prompt_customer_phone">Customer\'s Phone</string>
    <string name="hint_phone">05- --- -- -- (10 digits)</string>
    <string name="prompt_image">Image</string>
    <string name="choose_image">Choose Image</string>
    <string name="default_image">defaultImage.png</string>
    <!--Strings for "Settings" page-->
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="contact">Contact Us</string>
    <string name="transactions">TRANSACTION HISTORY</string>
    <string name="username">Username</string>
    <string name="role">Role</string>
    <string name="out">SIGN OUT</string>
    <string name="company_profile">Company Profile</string>
    <string name="developers">This app was developed by Amjad Abujamous, Abdullah Aldayel, and Mohammad Balghunaim. The A Team, Alfaisal University.</string>
    <string name="amjad_email">aabujamous@alfaisal.edu</string>
    <string name="mohammad_email">mbalghunaim@alfaisal.edu</string>
    <string name="abdullah_email">amaldayel@alfaisal.edu</string>
    <!--Strings for show products activities-->
    <string name="all_products">All products</string>
</resources>
