<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite1"
    tools:context=".SettingsActivity">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:itemBackground="@color/colorWhite2"
        app:itemTextColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <View
        android:id="@+id/divider7"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="510dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="32dp"
        android:fillViewport="true"
        android:scrollbarStyle="outsideOverlay"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/cambay"
                android:text="@string/profile"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ScrollView
                android:id="@+id/scrollView3"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/table_shape_sharp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/table_shape_sharp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imgPerson"
                            android:layout_width="5dp"
                            android:layout_height="25dp"
                            android:layout_marginEnd="2dp"
                            android:layout_weight="1"
                            android:paddingStart="0dp"
                            android:paddingLeft="0dp"
                            app:srcCompat="@drawable/person" />

                        <TextView
                            android:id="@+id/txtUsername"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4sp"
                            android:layout_marginEnd="4sp"
                            android:layout_weight="1"
                            android:fontFamily="@font/droid_sans"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/table_shape_sharp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView6"
                            android:layout_width="5dp"
                            android:layout_height="25dp"
                            android:layout_marginEnd="2dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/work" />

                        <TextView
                            android:id="@+id/txtRole"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4sp"
                            android:layout_marginEnd="4sp"
                            android:layout_weight="1"
                            android:fontFamily="@font/droid_sans"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/table_shape_sharp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnOut"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/table_sharp_selector"
                            android:text="@string/out" />

                    </LinearLayout>

                </LinearLayout>
            </ScrollView>

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/cambay"
                android:text="@string/about"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scrollView3" />

            <ScrollView
                android:id="@+id/scrollView4"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/table_shape_sharp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView18">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/table_shape_sharp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView16"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/table_shape_sharp"
                            android:fontFamily="@font/cambay"
                            android:text="@string/developers"
                            android:textAlignment="center"
                            android:textColor="@color/colorAccent"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnCompany"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/table_sharp_selector"
                            android:text="@string/company_profile" />
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/cambay"
                android:text="@string/contact"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scrollView4" />

            <ScrollView
                android:id="@+id/scrollView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/table_shape_sharp"
                android:fillViewport="true"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView19">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/table_shape_sharp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView7"
                            android:layout_width="5dp"
                            android:layout_height="25dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/email" />

                        <TextView
                            android:id="@+id/textView21"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/droid_sans"
                            android:text="@string/amjad_email"
                            android:textAlignment="center"
                            android:textColor="@color/colorAccent"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/table_shape_sharp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView8"
                            android:layout_width="5dp"
                            android:layout_height="25dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/email" />

                        <TextView
                            android:id="@+id/textView22"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/droid_sans"
                            android:text="@string/mohammad_email"
                            android:textAlignment="center"
                            android:textColor="@color/colorAccent"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/table_shape_sharp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView9"
                            android:layout_width="5dp"
                            android:layout_height="25dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/email" />

                        <TextView
                            android:id="@+id/textView23"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/droid_sans"
                            android:text="@string/abdullah_email"
                            android:textAlignment="center"
                            android:textColor="@color/colorAccent"
                            android:textSize="18sp" />

                    </LinearLayout>

                </LinearLayout>
            </ScrollView>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>